// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionHeader initial 1`] = `
<dt
  aria-level="3"
  role="heading"
>
  <button
    aria-controls="panel-1"
    aria-disabled={undefined}
    aria-expanded={undefined}
    id="header-1"
    onClick={[Function]}
    type="button"
  >
    Header 1
  </button>
</dt>
`;

exports[`AccordionHeader is expanded and disabled 1`] = `
<dt
  aria-level="2"
  role="heading"
>
  <button
    aria-controls="panel-1"
    aria-disabled={true}
    aria-expanded={true}
    className="accordion__header"
    id="header-1"
    onClick={[Function]}
    type="button"
  >
    Header 1
  </button>
</dt>
`;
